<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_log"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/dialog_edit_entry_cancelBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/cancel_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Date : "
                    android:textColor="@color/textPrimary" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/dialog_edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:editable="false"
                    android:textColor="@color/textSecondary" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Week No : "
                    android:textColor="@color/textPrimary" />

                <EditText
                    android:id="@+id/dialog_edit_entry_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="Notes : "
                    android:textColor="@color/textPrimary" />

                <EditText
                    android:id="@+id/dialog_edit_entry_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:layout_marginBottom="10dp"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/dialog_edit_entry_editEntry_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/dialog_edit_entry_deleteEntry_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border_background"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>